code cleanup: pmd warnings for Boolean creation
git-svn-id: https://svn.code.sf.net/p/itext/code/trunk@3246 3a709846-db2a-4fbd-be0b-eb932eee6479