@@ -219,7 +219,7 @@ public class Chunk implements Element {
 			boolean changeLeading) {
 		this(OBJECT_REPLACEMENT_CHARACTER, new Font());
 		setAttribute(IMAGE, new Object[] { image, new Float(offsetX),
-				new Float(offsetY), new Boolean(changeLeading) });
+				new Float(offsetY), Boolean.valueOf(changeLeading) });
 	}
 
 	// implementation of the Element-methods
